fix a issue in which trix editor was not showing background for code block and also adjust back button on topic form

--- a/app/assets/stylesheets/settings.css.scss
+++ b/app/assets/stylesheets/settings.css.scss
@@ -1,7 +1,3 @@
 .back-button {
   margin: 2rem 0;
 }
-
-#deleteTopic {
-  margin-top: 2rem;
-}
